bdr.BDR.scala.error
Compilation error:
BDR:4: error: not found: value R
    if (litMessage()==R){
                      ^BDR:8: error: not found: value L
    if (litMessage()==L) {
                      ^BDR:31: error: value update is not a member of String
    if (litMessage()="X") {
        ^